Revision history for {{$dist->name}}

{{$NEXT}}
  - Download via https for better security (gh#13)

0.32      2021-05-26 21:04:50 -0600
  - Bump required libarchive to 3.2.0 (gh#9)
    This allows downstream modules to use the
    *_utf8 functions and the match API

0.31      2021-05-20 16:54:11 -0600
  - Bump required libarchive to 3.0.2 (3.0.0 and 3.0.1
    were alpha / beta versions)
  - Only build libarchive once where possible.  On MSWin32
    builds two builds are still required to completely
    support both static and dynamic libraries.

0.30      2021-05-20 09:45:09 -0600
  - More reliable system installs on macOS
  - More reliable share installs on windows

0.29      2017-08-24 08:20:55 -0400
  - production release identical to 0.028_06 release

0.28_06   2017-07-30 21:40:07 -0400
  - Bump Alien::Build version for parallel make fix
  - Tweak netbsd flags

0.28_05   2017-07-17 19:31:10 -0400
  - Drop support for _macro on non-linux

0.28_04   2017-06-10 13:35:10 -0400
  - Update alienfile to remove deprecation

0.28_03   2017-06-10 06:36:13 -0400
  - Build dynamic libraries separately

0.28_02   2017-03-30 18:07:43 -0400
  - Use Alien::Libxml2 to find libxml2

0.28_01   2017-03-30 14:03:41 -0400
  - Add legacy Alien::Libarchive compat layer

0.28      2017-03-30 14:01:20 -0400
  - initial version